<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="fragment"
            type="meet_eat.app.fragment.main.offer.OfferContactRequestFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgFragment">

        <TextView
            android:id="@+id/tvOfferContactRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:elevation="5dp"
            android:text="@string/contactRequest"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvOfferContactRequestInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            android:elevation="5dp"
            android:text="@string/contact_info"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOfferContactRequest" />

        <TextView
            android:id="@+id/tvOfferContactRequestText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:elevation="5dp"
            android:text="@string/contact_text"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOfferContactRequestInfo" />

        <CheckBox
            android:id="@+id/cbOfferContactRequestPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:buttonTint="@color/symbol"
            android:text="@string/phone_number"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOfferContactRequestText" />

        <CheckBox
            android:id="@+id/cbOfferContactRequestMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:buttonTint="@color/symbol"
            android:text="@string/e_mail"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cbOfferContactRequestPhoneNumber" />

        <Button
            android:id="@+id/btOfferContactRequestDecline"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/bg_button"
            android:elevation="5dp"
            android:text="@string/contact_decline"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btOfferContactRequestSend"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btOfferContactRequestSend"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/bg_button"
            android:elevation="5dp"
            android:text="@string/contact_accept"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btOfferContactRequestDecline" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>