<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgFragment">

    <ImageView
        android:id="@+id/ivBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/bgmain"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ibtBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:elevation="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/arrow_back"
        android:tint="@color/bgButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivOfferPicture"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:adjustViewBounds="true"
        android:elevation="4dp"
        android:scaleType="fitCenter"
        android:src="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvOfferPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:text="@string/picture"
        android:textColor="@color/textHint"
        android:textSize="120sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivOfferPicture"
        app:layout_constraintEnd_toEndOf="@+id/ivOfferPicture"
        app:layout_constraintStart_toStartOf="@+id/ivOfferPicture"
        app:layout_constraintTop_toTopOf="@+id/ivBackground" />

    <ImageButton
        android:id="@+id/ibtEdit"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:elevation="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/edit"
        android:tint="@color/symbol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ibtReport"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:elevation="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/report"
        android:tint="@color/symbol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibtEdit" />

    <ImageButton
        android:id="@+id/ibtBookmark"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:elevation="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/bookmark"
        android:tint="@color/symbol"
        app:layout_constraintBottom_toBottomOf="@+id/ivOfferPicture"
        app:layout_constraintEnd_toEndOf="@+id/ivOfferPicture"
        app:layout_constraintTop_toBottomOf="@+id/ivOfferPicture" />

    <TextView
        android:id="@+id/tvOfferTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="5dp"
        android:text="@string/title"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivOfferPicture" />

    <TextView
        android:id="@+id/tvOfferDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="5dp"
        android:text="@string/date_time"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOfferTitle" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="5dp"
        android:text="@string/price"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOfferTitle" />

    <TextView
        android:id="@+id/tvDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="5dp"
        android:text="@string/distance"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOfferDate" />

    <TextView
        android:id="@+id/tvCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="5dp"
        android:text="@string/city"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/tvDistance"
        app:layout_constraintStart_toEndOf="@+id/tvDistance"
        app:layout_constraintTop_toTopOf="@+id/tvDistance" />

    <TextView
        android:id="@+id/tvParticipants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="5dp"
        android:text="@string/participants"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPrice" />

    <ImageView
        android:id="@+id/ivProfile"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:adjustViewBounds="true"
        android:elevation="4dp"
        android:scaleType="fitCenter"
        android:src="@drawable/profilestd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDistance" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="5dp"
        android:text="@string/username"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivProfile"
        app:layout_constraintStart_toEndOf="@+id/ivProfile"
        app:layout_constraintTop_toTopOf="@+id/ivProfile" />

    <TextView
        android:id="@+id/tvRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="5dp"
        android:text="0"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvUsername"
        app:layout_constraintStart_toEndOf="@+id/tvUsername"
        app:layout_constraintTop_toTopOf="@+id/tvUsername" />

    <ImageView
        android:id="@+id/ivRating"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:adjustViewBounds="true"
        android:elevation="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/star"
        android:tint="@color/rating"
        app:layout_constraintBottom_toBottomOf="@+id/tvRating"
        app:layout_constraintStart_toEndOf="@+id/tvRating"
        app:layout_constraintTop_toTopOf="@+id/tvRating" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:elevation="5dp"
        android:text="@string/offer_description"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/tvTag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivProfile" />

    <TextView
        android:id="@+id/tvTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_tag"
        android:elevation="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/tag"
        android:textColor="@color/textHint"
        app:layout_constraintBottom_toTopOf="@+id/btParticipants"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btParticipate"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_button"
        android:elevation="5dp"
        android:text="@string/participate"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/tvParticipating"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btParticipants"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_button"
        android:elevation="5dp"
        android:text="@string/participants"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/btParticipate"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btContact"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_button"
        android:elevation="5dp"
        android:text="@string/contact"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/tvParticipating"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btCancel"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_button"
        android:elevation="5dp"
        android:text="@string/cancel"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/btContact"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvParticipating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/participating"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>