<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="fragment"
            type="meet_eat.app.fragment.main.settings.SettingsNotificationFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgFragment">

        <ImageButton
            android:id="@+id/ibtBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="16dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:elevation="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/arrow_back"
            android:tint="@color/bgButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSettingsNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:elevation="5dp"
            android:text="@string/notification"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="@+id/ibtBack"
            app:layout_constraintStart_toEndOf="@+id/ibtBack"
            app:layout_constraintTop_toTopOf="@+id/ibtBack" />

        <EditText
            android:id="@+id/etSettingsNotification"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="16dp"
            android:autofillHints=""
            android:background="@drawable/bg_edittext"
            android:elevation="5dp"
            android:hint="@string/minutes"
            android:inputType="number"
            android:maxLines="1"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/textHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ibtBack" />

        <TextView
            android:id="@+id/tvSettingsNotificationHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:elevation="5dp"
            android:text="@string/notification_hint"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etSettingsNotification" />

        <Button
            android:id="@+id/btSettingsNotificationSave"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/bg_button"
            android:elevation="5dp"
            android:text="@string/save"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>